MP-106: fix collection cards text overspill

--- a/client/src/plus/collections/v2/index.scss
+++ b/client/src/plus/collections/v2/index.scss
@@ -123,7 +123,7 @@
     box-shadow: var(--shadow-02);
     display: flex;
     flex-direction: column;
-    padding: 1em;
+    padding: 1rem;
 
     &.default {
       background-color: var(--background-secondary);
@@ -139,6 +139,7 @@
       align-self: center;
       font-size: var(--type-base-font-size-rem);
       line-height: var(--heading-line-height);
+      // vertically centre first line of title, without increasing line height:
       margin: calc(
           (
               var(--form-elem-height) - var(--type-base-font-size-rem) *
@@ -146,6 +147,7 @@
             ) / 2
         )
         0;
+      margin-right: 1rem;
       overflow-wrap: anywhere;
 
       a {
@@ -157,10 +159,12 @@
       color: var(--text-secondary);
       font-size: var(--type-smaller-font-size);
       font-style: italic;
+      overflow-wrap: anywhere;
     }
 
     p {
       margin: 0;
+      overflow-wrap: anywhere;
     }
 
     footer {
@@ -170,6 +174,7 @@
       flex-wrap: wrap;
       justify-content: space-between;
       margin-top: auto;
+      overflow-wrap: anywhere;
       padding-top: 1rem;
     }
 
